overlays/api/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-deployment
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      containers:
        - name: demo-api
          image: shyeonnie/demo-api:2
