overlays/api/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.uluru.io
      secretName: wildcard.uluru.io
  rules:
    - host: demo.uluru.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api-service
                port:
                  number: 80
